RESOLVED FIXED 209483
[ Mac wk2 ] imported/w3c/web-platform-tests/notifications/event-onclose.html is flaky failing.
https://bugs.webkit.org/show_bug.cgi?id=209483
Summary [ Mac wk2 ] imported/w3c/web-platform-tests/notifications/event-onclose.html ...
Jason Lawrence
Reported 2020-03-24 10:25:36 PDT
imported/w3c/web-platform-tests/notifications/event-onclose.html Description: This test is flaky failing on Mac wk2. The test is flaky failing throughout the visible history. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fnotifications%2Fevent-onclose.html&platform=mac&limit=50000&recent=false Diff: --- /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/notifications/event-onclose-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/notifications/event-onclose-actual.txt @@ -1,4 +1,6 @@ + +Harness Error (TIMEOUT), message = null PASS Checked test prerequisites. -PASS Invoked the onclose event handler. +NOTRUN Invoked the onclose event handler.
Attachments
Patch (9.48 KB, patch)
2020-04-22 12:45 PDT, Chris Dumez
no flags
Patch (9.81 KB, patch)
2020-04-23 07:53 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-24 10:25:58 PDT
Jason Lawrence
Comment 2 2020-03-24 10:43:23 PDT
I was able to reproduce this issue on r258908 using the command below. run-webkit-tests --iterations 1000 --exit-after-n-failures 3 --force -f imported/w3c/web-platform-tests/notifications/event-onclose.html
Jason Lawrence
Comment 3 2020-03-24 10:47:19 PDT
I have marked this test as failing while the issue is investigated. https://trac.webkit.org/changeset/258917/webkit
Chris Dumez
Comment 4 2020-04-22 12:45:42 PDT
Geoffrey Garen
Comment 5 2020-04-22 13:22:19 PDT
Comment on attachment 397240 [details] Patch r=me
EWS
Comment 6 2020-04-22 15:45:04 PDT
Committed r260535: <https://trac.webkit.org/changeset/260535> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397240 [details].
Simon Fraser (smfr)
Comment 7 2020-04-22 21:54:06 PDT
WebKit Commit Bot
Comment 8 2020-04-22 21:55:37 PDT
Re-opened since this is blocked by bug 210897
Chris Dumez
Comment 9 2020-04-23 07:53:58 PDT
EWS
Comment 10 2020-04-23 10:15:49 PDT
Committed r260576: <https://trac.webkit.org/changeset/260576> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397339 [details].
Note You need to log in before you can comment on or make changes to this bug.