[ Mac wk2 ] imported/w3c/web-platform-tests/notifications/event-onclose.html is flaky failing. https://bugs.webkit.org/show_bug.cgi?id=209483 <rdar://problem/60830377>

Reviewed by Geoff Garen.

Source/WebCore:

Align garbage collection of Notification JS wrapper with the specification:
- https://notifications.spec.whatwg.org/#garbage-collection [1]

In particular, the following changes were made:
1. Instead of using the legacy setPendingActivity() / unsetPendingActivity(), override
   ActiveDOMObject::virtualHasPendingActivity() to implement the behavior documented
   in the specification.
2. Keep the wrapper alive as long as the notification is showing and as long as there
   are relevant event listeners, as per [1]. Previously, we failed to check for event
   listeners, which was suboptimal.
3. Update the constructor to queue a task on the event loop in order to show the
   notification asynchronously, instead of relying on a SuspendableTimer for this
   purpose. Previously, the JS wrapper could get collected between construction and
   the notification getting shown, which was leading to the test flakiness.

No new tests, unskipped existing test.

* Modules/notifications/Notification.cpp:
(WebCore::Notification::Notification):
(WebCore::Notification::show):
(WebCore::Notification::finalize):
(WebCore::Notification::dispatchShowEvent):
(WebCore::Notification::dispatchClickEvent):
(WebCore::Notification::dispatchCloseEvent):
(WebCore::Notification::dispatchErrorEvent):
(WebCore::Notification::eventListenersDidChange):
(WebCore::Notification::virtualHasPendingActivity const):
* Modules/notifications/Notification.h:

LayoutTests:

Unskip test now that it is no longer flaky.

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/223803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260576 268f45cc-cd09-0410-ab3c-d52691b4dbfc